# muopdb

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml  extra_launch.json  plan.md  pyproject.toml  requirements.txt
.github/workflows/: rust.yml
proto/: muopdb.proto
py/: collection_config.json  create_1m_hdf5.py  create_test_hdf5.py  demo_insert_search.py  demo_search.py  embed_1m_sentences.py  generate_1m_sentences.py  muopdb_client.py  muopdb_pb2.py  muopdb_pb2_grpc.py  prepare_muopdb.py  read_hdf5.py
rs/aggregator/: Cargo.toml
rs/aggregator/src/: aggregator.rs  main.rs  node_manager.rs  shard_manager.rs
rs/benchmarks/: Cargo.toml
rs/benchmarks/src/: deletion_and_vacuum.rs  insertion.rs  vacuum.rs  wal_insertion.rs
rs/bloom_filter/: Cargo.toml
rs/bloom_filter/src/: bloom_filter.rs
rs/cli/: Cargo.toml
rs/cli/src/: index_viewer.rs  main.rs
rs/compression/: Cargo.toml
rs/compression/src/: compression.rs  lib.rs
rs/compression/src/elias_fano/: block_based_decoder.rs  ef.rs  mmap_decoder.rs  mod.rs
rs/compression/src/noc/: mod.rs  noc.rs
rs/config/: Cargo.toml
rs/config/src/: attribute_schema.rs  collection.rs  enums.rs  lib.rs  search_params.rs
rs/demo/: Cargo.toml
rs/demo/src/: main.rs  search.rs
rs/index/: Cargo.toml
rs/index/src/: hnsw.rs  hnsw_builder.rs  hnsw_reader.rs  hnsw_writer.rs  index.rs  ivf.rs  lib.rs  traverse_state.rs  utils.rs
rs/index/src/attribute/: schema.rs
rs/index/src/collection/: collection.rs  core.rs  mod.rs  reader.rs  snapshot.rs
rs/index/src/hnsw/: async_graph_storage.rs  async_index.rs  builder.rs  index.rs  mod.rs  reader.rs  utils.rs  writer.rs
rs/index/src/hnsw/block_based/: graph_storage.rs  index.rs  mod.rs
rs/index/src/hnsw/mmap/: index.rs
rs/index/src/inverted_list/: file.rs  mod.rs
rs/index/src/ivf/: builder.rs  index.rs  mod.rs  reader.rs  writer.rs
rs/index/src/ivf/block_based/: index.rs  mod.rs  storage.rs
rs/index/src/ivf/files/: invalidated_ids.rs  mod.rs
rs/index/src/ivf/mmap/: index.rs
rs/index/src/multi_spann/: builder.rs  index.rs  mod.rs  reader.rs  user_index_info.rs  writer.rs
rs/index/src/multi_terms/: builder.rs  index.rs  mod.rs  reindex_example.rs  writer.rs
rs/index/src/optimizers/: engine.rs  merge.rs  mod.rs  noop.rs  vacuum.rs
rs/index/src/posting_list/: combined_file.rs  file.rs  fixed_file.rs  mod.rs  storage.rs
rs/index/src/query/: async_planner.rs  iter.rs  mod.rs  planner.rs
rs/index/src/query/async_iters/: and_iter.rs  ids_iter.rs  mod.rs  or_iter.rs  term_iter.rs
rs/index/src/query/iters/: and_iter.rs  ids_iter.rs  mod.rs  or_iter.rs  term_iter.rs
rs/index/src/segment/: immutable_segment.rs  mod.rs  mutable_segment.rs  pending_mutable_segment.rs  pending_segment.rs
rs/index/src/spann/: builder.rs  index.rs  iter.rs  mod.rs  reader.rs  writer.rs
rs/index/src/terms/: builder.rs  index.rs  index_safe.rs  mod.rs  scratch.rs  term_index_info.rs  writer.rs
rs/index/src/tokenizer/: mod.rs  stemming_tokenizer.rs  tokenizer.rs  white_space_tokenizer.rs
rs/index/src/vector/: async_storage.rs  file.rs  fixed_file.rs  mod.rs
rs/index/src/wal/: entry.rs  file.rs  mod.rs  wal.rs
rs/index_server/: Cargo.toml
rs/index_server/src/: admin_server.rs  collection_catalog.rs  collection_manager.rs  collection_provider.rs  http_server.rs  index_catalog.rs  index_manager.rs  index_provider.rs  index_server.rs  main.rs  metrics.rs
rs/index_writer/: Cargo.toml
rs/index_writer/resources/: test.hdf5
rs/index_writer/src/: config.rs  hnsw_reindexer.rs  index_writer.rs  lib.rs  main.rs
rs/index_writer/src/input/: hdf5.rs  mod.rs
rs/index_writer/src/scripts/: write_index_writer_config.rs
rs/index_writer/test_output/hnsw/: index  vector_storage
rs/log_consumer/: Cargo.toml
rs/log_consumer/src/: admin.rs  consumer.rs  lib.rs  producer.rs
rs/metrics/: Cargo.toml
rs/metrics/src/: api.rs  internal.rs  lib.rs
rs/proto/: Cargo.toml  build.rs
rs/proto/proto/: admin.proto  aggregator.proto  muopdb.proto
rs/proto/src/: lib.rs  muopdb.rs
rs/quantization/: Cargo.toml
rs/quantization/benches/: pq_dist.rs
rs/quantization/src/: lib.rs  no_op.rs  pq.rs  pq_builder.rs  quantization.rs  rabitq.rs  rabitq_builder.rs  reader.rs  typing.rs
rs/quantization/src/noq/: mod.rs  noq.rs  noq_builder.rs
rs/quantization/src/pq/: mod.rs  pq.rs  pq_builder.rs
rs/quantization/src/rabitq/: mod.rs  rabitq.rs  rabitq_builder.rs
rs/queue_consumer/: Cargo.toml
rs/queue_consumer/src/: admin.rs  consumer.rs  lib.rs  producer.rs
rs/utils/: Cargo.toml
rs/utils/benches/: dot_product.rs  dot_product_similarity.rs  double_hash.rs  kmeans.rs  l2.rs  mem.rs  odom.rs
rs/utils/src/: hdf5_reader.rs  io.rs  l2.rs  lib.rs  main.rs  mem.rs  test_utils.rs  tracing.rs
rs/utils/src/block_cache/: cache.rs  disk_cache.rs  mod.rs
rs/utils/src/bloom_filter/: blocked_bloom_filter.rs  bloom_filter.rs  builder.rs  immutable_bloom_filter.rs  mod.rs  reader.rs  writer.rs
rs/utils/src/distance/: dot_product.rs  dot_product_similarity.rs  l2.rs  lane_conforming.rs  mod.rs
rs/utils/src/file_io/: cached_file.rs  env.rs  mmap_file.rs  mod.rs  object_store_file.rs  standard_file.rs  uring_engine.rs  uring_file.rs
rs/utils/src/kmeans/: kmeans.rs
rs/utils/src/kmeans_builder/: kmeans_builder.rs  mod.rs
rs/utils/src/on_disk_ordered_map/: builder.rs  encoder.rs  map.rs  mod.rs
rs/utils/src/scripts/: run_kmeans.rs
src/aggregator/: aggregator.rs  main.rs
src/cli/: main.rs
src/quantization_bak/: main.rs  mod.rs  pq.rs
