[workspace]
members = [
    "rs/aggregator", 
    "rs/cli", 
    "rs/index", 
    "rs/index_server", 
    "rs/index_writer",
    "rs/proto", 
    "rs/quantization", 
    "rs/utils",
]
resolver = "2"

[profile.release]
debug = 1

[workspace.dependencies]
approx = "0.5"
anyhow = "1.0.90"
aggregator = {path='./rs/aggregator'}
criterion = "0.4"
proto = {path='./rs/proto'}
quantization = {path='./rs/quantization'}
utils = {path='./rs/utils'}
index = {path='./rs/index'}
index_writer = {path='./rs/index_writer'}
tonic = "0.8"
prost = "0.11"
tonic-build = "0.8"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
clap = { version = "4.1.4", features = ["derive"] }
tonic-reflection = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "=1.0.1"
rand = "0.8.5"
log = "0.4.22"
env_logger = "0.11.5"
tempdir = "0.3.7"
ordered-float = "4.3.0"
hdf5 = { package = "hdf5-metno", version = "0.9.0" }
kmeans = "0.11.0"
memmap2 = "0.9.5"
byteorder = "1.5.0"
num-traits = "0.2.19"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-linalg = {version = "0.16.0", features = ["openblas-system"]}
strum = { version = "0.25.0", features = ["derive"] }
bit-vec = "0.8.0"
roaring = "0.10.6"
rayon = "1.10.0"
