[workspace]
members = [ 
    "rs/aggregator", 
    "rs/cli", 
    "rs/compression", 
    "rs/config",
    "rs/demo",
    "rs/index", 
    "rs/index_server", 
    "rs/index_writer",
    "rs/proto", 
    "rs/quantization",
    "rs/utils",
    "rs/queue_consumer"
]
resolver = "2"

[profile.release]
strip = true

[workspace.dependencies]
aggregator = {path='./rs/aggregator'}
anyhow = "1.0.90"
approx = "0.5"
atomic_refcell = "0.1.13"
bit-vec = "0.8.0"
byteorder = "1.5.0"
clap = { version = "4.1.4", features = ["derive"] }
compression = {path='./rs/compression'}
config = {path='./rs/config'}
criterion = "0.4"
dashmap = "6.1.0"
env_logger = "0.11.5"
fs_extra = "1.3.0"
futures = "0.3.31"
hdf5 = { package = "hdf5-metno", version = "0.9.0" }
index = {path='./rs/index'}
index_writer = {path='./rs/index_writer'}
kmeans = "0.11.0"
lock_api = "0.4.12"
log = "0.4.22"
memmap2 = "0.9.5"
ndarray = "0.15.6"
ndarray-linalg = {version = "0.16.0", features = ["openblas-system"]}
ndarray-rand = "0.14.0"
num-traits = "0.2.19"
odht = "0.3.1"
ordered-float = "4.3.0"
parking_lot = {version = "0.12.3", features = ["send_guard"]}
prost = "0.13.4"
proto = {path='./rs/proto'}
quantization = {path='./rs/quantization'}
rand = "0.8.5"
rayon = "1.10.0"
reqwest = {version = "0.12.11", features = ["json"]}
roaring = "0.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0.1"
serde_yaml = "0.9"
sorted-vec = "0.8.5"
strum = { version = "0.25.0", features = ["derive"] }
tempdir = "0.3.7"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.12.3"
tonic-build = "0.12.3"
tonic-reflection = "0.12.3"
utils = {path='./rs/utils'}
queue_consumer = {path='./rs/queue_consumer'}
rdkafka = "0.37.0"