[workspace]
members = [
  "rs/aggregator",
  "rs/benchmarks",
  "rs/cli",
  "rs/compression",
  "rs/config",
  "rs/index",
  "rs/index_server",
  "rs/metrics",
  "rs/proto",
  "rs/quantization",
  "rs/utils",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[workspace.lints.clippy]
uninlined_format_args = "allow"

[workspace.dependencies]
aggregator = { path = './rs/aggregator' }
anyhow = "1.0.90"
approx = "0.5"
async-lock = "3.4"
async-trait = "0.1"
atomic_refcell = "0.1.13"
bit-vec = "0.8.0"
bitvec = "1.0"
byteorder = "1.5.0"
clap = { version = "4.1.4", features = ["derive"] }
compression = { path = './rs/compression' }
config = { path = './rs/config' }
criterion = "0.4"
crossbeam = "0.8"
dashmap = "6.1.0"
env_logger = "0.11.5"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
fs_extra = "1.3.0"
futures = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["server", "http1"] }
hyper-util = "0.1.19"
index = { path = './rs/index' }
integer-encoding = "4.0.2"
kmeans = "0.11.0"
lock_api = "0.4.12"
log = "0.4.22"
memmap2 = "0.9.5"
metrics = { path = './rs/metrics' }
moka = { version = "0.12", features = ["future"] }
nix = { version = "0.29", features = ["fs"] }
ndarray = "0.16.1"
ndarray-linalg = { version = "0.17.0", features = ["openblas-system"] }
ndarray-rand = "0.15.0"
num-traits = "0.2.19"
object_store = { version = "0.13.1", features = ["aws"] }
odht = "0.3.1"
ordered-float = "4.3.0"
ouroboros = "0.18.5"
parking_lot = { version = "0.12.3", features = ["send_guard"] }
pprof = { version = "0.15", features = ["prost-codec"] }
prometheus-client = "0.23.1"
prost = "0.13.4"
proto = { path = './rs/proto' }
quantization = { path = './rs/quantization' }
rand = "0.8.5"
rayon = "1.10.0"
reqwest = { version = "0.12.11", features = ["json"] }
rkyv = "0.8.10"
roaring = "0.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1", features = ["std"] }
serde_yaml = "0.9"
sorted-vec = "0.8.5"
strum = { version = "0.25.0", features = ["derive"] }
tempdir = "0.3.7"
tokio = { version = "1.24", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "signal",
] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.12.3"
tonic-build = "0.12.3"
tonic-reflection = "0.12.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
utils = { path = './rs/utils' }
uuid = { version = "1.16.0", features = ["v4"] }
rust-stemmers = "1.2"
url = "2.5"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

