[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
proto.workspace = true
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
clap = { version = "4.1.4", features = ["derive"] }
tonic-reflection = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rand = "0.8.5"
log.workspace = true
env_logger.workspace = true
utils.workspace = true
serde_json.workspace = true
tempdir.workspace = true
