[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
futures.workspace = true
log.workspace = true
prost.workspace = true
proto.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempdir.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tonic-reflection.workspace = true
tonic.workspace = true
utils.workspace = true
