[package]
name = "benchmarks"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "insertion"
path = "src/insertion.rs"
harness = false

[[bench]]
name = "deletion_and_vacuum"
path = "src/deletion_and_vacuum.rs"
harness = false

[dependencies]
utils.workspace = true
criterion.workspace = true
tempdir.workspace = true
config.workspace = true
index.workspace = true
quantization.workspace = true
rand.workspace = true
