[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "index_viewer"
path = "src/index_viewer.rs"

[dependencies]
clap.workspace = true
env_logger.workspace = true
log.workspace = true
proto.workspace = true
tokio.workspace = true
tonic.workspace = true
rand.workspace = true
index.workspace = true
