[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "index_viewer"
path = "src/index_viewer.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
index.workspace = true
log.workspace = true
tracing.workspace = true
proto.workspace = true
quantization.workspace = true
rand.workspace = true
tokio.workspace = true
tonic.workspace = true
utils.workspace =  true
