[package]
name = "compression"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bitvec.workspace = true
env_logger.workspace = true
num-traits.workspace = true
log.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["full"] }
tempdir.workspace = true
utils.workspace = true
