[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic.workspace = true
hdf5.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
proto.workspace = true
tokio.workspace = true
ndarray.workspace = true
reqwest.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
serde.workspace = true
utils.workspace = true
log_consumer.workspace = true

[[bin]]
name = "insert"
path = "src/main.rs"


[[bin]]
name = "search"
path = "src/search.rs"
