[package]
name = "index"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
bit-vec.workspace = true
byteorder.workspace = true
dashmap.workspace = true
env_logger.workspace = true
kmeans.workspace = true
log.workspace = true
memmap2.workspace = true
num-traits.workspace = true
ordered-float.workspace = true
quantization.workspace = true
rand.workspace = true
roaring.workspace = true
sorted-vec.workspace = true
tempdir.workspace = true
utils.workspace = true
