[package]
name = "index"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
async-lock.workspace = true
async-trait.workspace = true
anyhow.workspace = true
bit-vec.workspace = true
byteorder.workspace = true
compression.workspace = true
config.workspace = true
dashmap.workspace = true
proto.workspace = true
env_logger.workspace = true
futures.workspace = true
kmeans.workspace = true
log.workspace = true
tracing.workspace = true
memmap2.workspace = true
num-traits.workspace = true
ordered-float.workspace = true
ouroboros.workspace = true
quantization.workspace = true
rust-stemmers.workspace = true
rand.workspace = true
roaring.workspace = true
sorted-vec.workspace = true
tempdir.workspace = true
utils.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
rayon.workspace = true
rkyv.workspace = true
atomic_refcell.workspace = true
odht.workspace = true
parking_lot.workspace = true
lock_api.workspace = true
fs_extra.workspace = true
tokio.workspace = true
metrics.workspace = true
