[package]
name = "index_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap = { version = "4.1.4", features = ["derive"] }
env_logger.workspace = true
futures.workspace = true
index.workspace = true
log.workspace = true
parking_lot.workspace = true
prost.workspace = true
proto.workspace = true
rand.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic-reflection.workspace = true
tonic.workspace = true
utils.workspace = true
quantization.workspace = true
index_writer.workspace = true
config.workspace = true
log_consumer.workspace = true
