[package]
name = "index_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap = { version = "4.1.4", features = ["derive"] }
env_logger.workspace = true
futures.workspace = true
index.workspace = true
log.workspace = true
parking_lot.workspace = true
prost.workspace = true
proto.workspace = true
rand.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic-reflection.workspace = true
tonic.workspace = true
utils.workspace = true
quantization.workspace = true
index_writer.workspace = true
config.workspace = true
hyper = { version = "1.6.0", features = ["server", "http1"] }
prometheus-client.workspace = true
http-body-util = "0.1.3"
hyper-util = "0.1.10"
metrics.workspace = true
[dev-dependencies]
tempdir.workspace = true
