[package]
name = "index_server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
futures.workspace = true
index.workspace = true
log.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
parking_lot.workspace = true
prost.workspace = true
proto.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic-reflection.workspace = true
tonic.workspace = true
utils.workspace = true
quantization.workspace = true
config.workspace = true
hyper.workspace = true
prometheus-client.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
metrics.workspace = true
pprof.workspace = true
url.workspace = true

[dev-dependencies]
tempdir.workspace = true
