[package]
name = "index_writer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
hdf5.workspace = true
index.workspace = true
ndarray.workspace = true
quantization.workspace = true
tempdir.workspace = true
