[package]
name = "index_writer"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "hnsw_reindexer"
path = "src/hnsw_reindexer.rs"

[[bin]]
name = "write_index_writer_config"
path = "src/scripts/write_index_writer_config.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
compression.workspace = true
config.workspace = true
env_logger.workspace = true
log.workspace = true
hdf5.workspace = true
index.workspace = true
ndarray.workspace = true
quantization.workspace = true
tempdir.workspace = true
rand.workspace = true
serde.workspace = true
serde_yaml.workspace = true
utils.workspace = true
