[package]
name = "log_consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
rmp-serde.workspace = true
rdkafka.workspace = true
tokio-stream.workspace = true
anyhow.workspace = true
serde.workspace = true
proto.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
