[package]
name = "quantization"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_yaml.workspace = true
serde.workspace = true
tempdir.workspace = true
kmeans.workspace = true
rand.workspace = true
utils.workspace = true
criterion.workspace = true
log.workspace = true
env_logger.workspace = true

[[bench]]
name = "pq_dist"
harness = false
