[package]
name = "quantization"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde_yaml.workspace = true
serde.workspace = true
tempdir.workspace = true
kmeans.workspace = true
rand.workspace = true
utils.workspace = true
criterion.workspace = true
log.workspace = true
env_logger.workspace = true
strum.workspace = true
ndarray.workspace = true
ndarray-rand.workspace = true
ndarray-linalg.workspace = true
bit-vec.workspace = true

[[bench]]
name = "pq_dist"
harness = false
