[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.90"
bitvec = "1"
criterion.workspace = true
env_logger.workspace = true
hdf5.workspace = true
integer-encoding.workspace = true
kmeans.workspace = true
log.workspace = true
memmap2.workspace = true
ndarray.workspace = true
proto.workspace = true
rand.workspace = true
rayon.workspace = true
rkyv.workspace = true
strum.workspace = true
tempdir.workspace = true
uuid.workspace = true
xxhash-rust.workspace = true

[[bench]]
name = "l2"
harness = false

[[bench]]
name = "kmeans"
harness = false

[[bench]]
name = "dot_product"
harness = false

[[bench]]
name = "mem"
harness = false

[[bench]]
name = "odom"
harness = false

[[bin]]
name = "run_kmeans"
path = "src/scripts/run_kmeans.rs"
