[package]
name = "utils"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bitvec.workspace = true
criterion.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
env_logger.workspace = true
integer-encoding.workspace = true
kmeans.workspace = true
log.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
tonic.workspace = true
memmap2.workspace = true
ndarray.workspace = true
proto.workspace = true
rand.workspace = true
rayon.workspace = true
rkyv.workspace = true
strum.workspace = true
tempdir.workspace = true
uuid.workspace = true
xxhash-rust.workspace = true
dashmap.workspace = true
futures.workspace = true
moka.workspace = true
nix.workspace = true
crossbeam.workspace = true
parking_lot = { workspace = true }
atomic_refcell = { workspace = true }
object_store = { version = "0.11", features = ["aws"] }
url = "2.5"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6"
tokio-uring = "0.5"

[[bench]]
name = "l2"
harness = false

[[bench]]
name = "kmeans"
harness = false

[[bench]]
name = "dot_product"
harness = false

[[bench]]
name = "mem"
harness = false

[[bench]]
name = "odom"
harness = false

[[bin]]
name = "run_kmeans"
path = "src/scripts/run_kmeans.rs"
